[package]
name = "Hassium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# if git version needed 
rust-sc2 = { version = "^1.1.0"}#, git = "https://github.com/UltraMachine/rust-sc2", features = ["wine_sc2"]}
rayon = "^1.5.1"

